@@ -400,10 +400,8 @@ make_relative_prefix_1 (const char *progname, const char *bin_prefix,
    from somwhere else. */
 
 char *
-make_relative_prefix (progname, bin_prefix, prefix)
-     const char *progname;
-     const char *bin_prefix;
-     const char *prefix;
+make_relative_prefix (const char *progname, const char *bin_prefix,
+		      const char *prefix)
 {
   return make_relative_prefix_1 (progname, bin_prefix, prefix, 1);
 }
@@ -414,10 +412,9 @@ make_relative_prefix (progname, bin_prefix, prefix)
    installation is patched together with soft links. */
 
 char *
-make_relative_prefix_ignore_links (progname, bin_prefix, prefix)
-     const char *progname;
-     const char *bin_prefix;
-     const char *prefix;
+make_relative_prefix_ignore_links (const char *progname,
+				   const char *bin_prefix,
+				   const char *prefix)
 {
   return make_relative_prefix_1 (progname, bin_prefix, prefix, 0);
 }
